paper_experimental_results/2026-05-06T18-03-03/grok-code-fast-1/expressions/compound_literals_7/sample_002/target.compile.log
error[E0432]: unresolved import `lazy_static`
 --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/expressions/compound_literals_7/sample_002/target.rs:1:5
  |
1 | use lazy_static::lazy_static;
  |     ^^^^^^^^^^^ use of unresolved module or unlinked crate `lazy_static`
  |
help: you might be missing a crate named `lazy_static`, add it to your project and import it in your code
  |
1 + extern crate lazy_static;
  |

error[E0425]: cannot find value `ENDLESS_ZEROS` in this scope
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/expressions/compound_literals_7/sample_002/target.rs:20:40
   |
20 |     if (x.cdr as *const IntList) != (&*ENDLESS_ZEROS as *const IntList) {
   |                                        ^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find value `ENDLESS_ZEROS` in this scope
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/expressions/compound_literals_7/sample_002/target.rs:23:44
   |
23 |     if (x.cdr.cdr as *const IntList) != (&*ENDLESS_ZEROS as *const IntList) {
   |                                            ^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find value `ENDLESS_ZEROS` in this scope
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/expressions/compound_literals_7/sample_002/target.rs:30:30
   |
30 |     std::process::exit(eval(*ENDLESS_ZEROS));
   |                              ^^^^^^^^^^^^^ not found in this scope

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0425, E0432.
For more information about an error, try `rustc --explain E0425`.